force-app/main/default/objects/sugati__Opportunity_Email__c/sugati__Opportunity_Email__c.object-meta.xml
<CustomObject>
    <label>Opportunity Email</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>