force-app/main/default/objects/sugati__Opportunity_Email__c/fields/sugati__OE_Email_Closing__c.field-meta.xml
<CustomField>
    <fullName>sugati__OE_Email_Closing__c</fullName>
    <label>Email Closing</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>