force-app/main/default/objects/sugati__Opportunity_Email__c/fields/sugati__OE_Email_Intro__c.field-meta.xml
<CustomField>
    <fullName>sugati__OE_Email_Intro__c</fullName>
    <label>Email Intro</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>