force-app/main/default/objects/sugati__Opportunity_Email__c/fields/sugati__OE_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>sugati__OE_Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>