force-app/main/default/objects/sugati__Opportunity_Email__c/fields/sugati__OE_Email_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__OE_Email_Type__c</fullName>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking Form Email</fullName>
            </value>
            <value>
                <fullName>Email Itinerary</fullName>
            </value>
            <value>
                <fullName>HE Recap Email</fullName>
            </value>
            <value>
                <fullName>Holiday Suggestion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>