force-app/main/default/objects/sugati__Opportunity_Email__c/fields/sugati__OE_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__OE_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Emails</relationshipLabel>
    <relationshipName>Opportunity_Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>