force-app/main/default/objects/sugati__Opportunity_Email__c/fields/sugati__OE_To_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>sugati__OE_To_Email_Addresses__c</fullName>
    <label>To Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>